--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Beetroot</title>
 </head>
 
 <body>
+
+	<h1>Beetroot</h1>
+
 </body>
 </html>
