--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <body>
 
 	<h1>Beetroot (Beta vulgaris)</h1>
-	A bundle of organic beets from a local farm food co-op program.
-55 to 65 days are needed from germination to harvest of the root.
-The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a
+	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+	<p>55 to 65 days are needed from germination to harvest of the root.</p>
+	<p>The usually deep purple roots of <strong>beetroot<strong> are eaten either grilled, boiled, or roasted as a
 cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
-shredded, either alone or combined with any salad vegetable.
-Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-— Jim Halpert
+shredded, either alone or combined with any salad vegetable.</p>
+	<footer>
+	<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
+	<site>— Jim Halpert</site></footer>
 I have some weird habits. For instance, I love beets. Show me a salad bar and I will
 clean them out of their beets.
 — Chris Pratt
