--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 	<h1>Beetroot (Beta vulgaris)</h1>
 	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
 	<p>55 to 65 days are needed from germination to harvest of the root.</p>
-	<p>The usually deep purple roots of <strong>beetroot<strong> are eaten either grilled, boiled, or roasted as a
+	<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a
 cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 shredded, either alone or combined with any salad vegetable.</p>
 	<footer>
-	<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
-	<site>— Jim Halpert</site></footer>
-I have some weird habits. For instance, I love beets. Show me a salad bar and I will
-clean them out of their beets.
-— Chris Pratt
+		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
+		<site>— Jim Halpert</site>
+	</footer>
+	<footer>
+		<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
+clean them out of their beets.</blockquote>
+		<site>— Chris Pratt</site>
+	</footer>
 Albino
 Bull’s Blood
 Chioggia
