--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 shredded, either alone or combined with any salad vegetable.</p>
 	<footer>
-		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
-		<site>— Jim Halpert</site>
+		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
+		<site>— Jim Halpert</site></blockquote>
 	</footer>
 	<footer>
 		<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
