--- a/index.html
+++ b/index.html
@@ -8,26 +8,31 @@
 <body>
 
 	<h1>Beetroot (Beta vulgaris)</h1>
+	<figure>
+	<img src="images/beetroot.jpg" alt="">
 	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
 	<p>55 to 65 days are needed from germination to harvest of the root.</p>
 	<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a
 cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 shredded, either alone or combined with any salad vegetable.</p>
 	<footer>
-		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-		<site>— Jim Halpert</site></blockquote>
+		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
+		<site>— Jim Halpert</site>
 	</footer>
 	<footer>
-		<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
+		<blockquote>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will
 clean them out of their beets.</blockquote>
 		<site>— Chris Pratt</site>
 	</footer>
-Albino
-Bull’s Blood
-Chioggia
-Detroit Dark Red
-Early Wonder
-Serving size: 100 g
+	<h2>Common Varieties</h2>
+	<ol>
+		<li>Albino</li>
+		<li>Bull’s Blood</li>
+		<li>Chioggia</li>
+		<li>Detroit Dark Red</li>
+		<li>Early Wonder</li>
+	</ol>
+	Serving size: 100 g
 Energy: 180 kJ
 Carbohydrates: 9.96 g
 Fat: 0.18 g
