--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-	<h1>Beetroot (Beta vulgaris)</h1>
+	<h1>Beetroot <i>(Beta vulgaris)</i></h1>
 	<figure>
 	<img src="images/beetroot.jpg" alt="">
 	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
@@ -15,15 +15,17 @@
 	<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a
 cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 shredded, either alone or combined with any salad vegetable.</p>
-	<footer>
-		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
+	<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
+		<footer>
 		<site>— Jim Halpert</site>
-	</footer>
-	<footer>
-		<blockquote>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will
-clean them out of their beets.</blockquote>
+		</footer>
+	</blockquote>
+	<blockquote>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will
+clean them out of their beets.
+		<footer>
 		<site>— Chris Pratt</site>
-	</footer>
+		</footer>
+	</blockquote>
 	<h2>Common Varieties</h2>
 	<ol>
 		<li>Albino</li>
@@ -32,36 +34,32 @@ clean them out of their beets.</blockquote>
 		<li>Detroit Dark Red</li>
 		<li>Early Wonder</li>
 	</ol>
-	Serving size: 100 g
-Energy: 180 kJ
-Carbohydrates: 9.96 g
-Fat: 0.18 g
-Protein: 1.68 g
-Crimson
-Awesome
-Pickle-able
-Vegetable!
-Delicious
-Source: Wikipedia; Last modified: Aug 30, 2014
-Beetroot (Beta vulgaris)
-Common varieties
-Albino
-Bull’s Blood
-Chioggia
-Detroit Dark Red
-Early Wonder
-Nutritional information
-Serving size: 100 g
-Energy: 180 kJ
-Carbohydrates: 9.96 g
-Fat: 0.18 g
-Protein: 1.68 g
-Tags
-Crimson
-Awesome
-Pickle-able
-Vegetable!
-Delicious
-Source: Wikipedia; Last modified: Aug 30, 2014
+	<h2>Nutritional information</h2>
+	<p>Serving size: 100 g</p>
+	<dl>
+		<dt>Energy:</dt>
+		<dd>
+			<data value="180">180 kJ</data>
+		</dd>
+		<dt>Carbohydrates:</dt>
+		<dd>
+			<data value="9.96">9.96 g</data.
+		</dd>
+		<dt>Fat:</dt>
+		<dd>
+			<data value="0.18">0.18 g<data>
+		</dd>
+		<dt>Protein:</dt>
+		<dd>
+			<data value="1.68">1.68 g</data>
+		</dd>
+	</dl>
+	<a href="">Crimson</a>
+	<a href="">Awesome</a>
+	<a href="">Pickle-able</a>
+	<a href="">Vegetable!</a>
+	<a href="">Delicious</a>
+	
+	<p>Source: <a href="">Wikipedia;</a> Last modified: Aug 30, 2014</p>
 </body>
 </html>
