Added css style

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link a href="css/general.css" rel='stylesheet'>
 	<title>Beetroot</title>
 </head>
 
 <body>
-
+	<div>
 	<h1>Beetroot <i>(Beta vulgaris)</i></h1>
-	<figure>
+	</div>
 	<img src="images/beetroot.jpg" alt="">
 	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
 	<p>55 to 65 days are needed from germination to harvest of the root.</p>
@@ -17,13 +18,13 @@ cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or r
 shredded, either alone or combined with any salad vegetable.</p>
 	<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
 		<footer>
-		<site>— Jim Halpert</site>
+		<cite>— Jim Halpert</cite>
 		</footer>
 	</blockquote>
 	<blockquote>I have some weird habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will
 clean them out of their beets.
 		<footer>
-		<site>— Chris Pratt</site>
+		<cite>— Chris Pratt</cite>
 		</footer>
 	</blockquote>
 	<h2>Common Varieties</h2>
@@ -54,12 +55,14 @@ clean them out of their beets.
 			<data value="1.68">1.68 g</data>
 		</dd>
 	</dl>
+	<div class="tags">
 	<a href="">Crimson</a>
 	<a href="">Awesome</a>
 	<a href="">Pickle-able</a>
 	<a href="">Vegetable!</a>
 	<a href="">Delicious</a>
+	</div>
 	
-	<p>Source: <a href="">Wikipedia;</a> Last modified: Aug 30, 2014</p>
+	<p>Source: <a href="">Wikipedia;</a> Last modified: <time datatime="2014-08-30">Aug 30, 2014</p>
 </body>
 </html>
